# secret-game

./: .cursorrules  .gitignore  README.md  README_model_comparison.md  implementation_plan.md  pyproject.toml  requirements.txt  run_batch_analysis.sh  run_battle.sh  run_conversation_batch.sh  run_conversation_batch_test.sh  run_model_comparison.sh  test_anthropic.py  test_openai.py
docs/: agent_implementation_guide.md  agent_interface.md  api_setup.md  batch_processing.md  game_modes.md  model_comparison.md
examples/: aggressive_agent_battle.py  aggressive_vs_regular.py  analyze_model_results.py  basic_game.py  batch_statistical_analysis.py  debug_env.py  debug_model_comparison.py  model_battle.py  model_comparison_study.py  run_claude_battle.py  run_conversation_batch.py  run_game.py  test_conversation_batching.py
results/: claude_battle_standard_20250325_024714.json  claude_battle_standard_20250325_024738.json  claude_battle_standard_20250325_025649.json  claude_battle_standard_20250325_030106.json  claude_battle_standard_20250325_030242.json  model_battle_standard_20250325_030309.json  model_battle_standard_20250325_030525.json  model_battle_standard_20250325_032259.json  model_battle_standard_20250325_034812.json
results/batch/: batch_results_20250325_181350.json  batch_results_20250325_183721.json
results/batch_test/: results_20250325_233330.json
results/conversation_batch_test/: results_20250325_234146.json  results_20250326_003007.json
src/ai_secret_game/: __init__.py  cli.py
tests/: conftest.py
tests/unit/: test_scoring.py
(+86 files in other folders)
